--- a/002.org
+++ b/002.org
@@ -287,7 +287,7 @@ As both men thought of this as "just the first morning's work", they were taking
 
 The sluice would gouge out another half man of depth overnight, depending on conditions, and often enough, something worth examining would be uncovered, sometimes protruding out of the silt like great crocodile eggs[fn:: there has got to be some wild uses for actual crocodile eggs.]. Each man would dive, feel around a bit, emerge take a small break and repeat, for hours as it turned out, because this particular gouge was laden with quite a few frustratingly marginal stones, which, 'marginal' not withstanding, had to be hauled out in order to be examined /at all/.
 
-The two men were exhausted and both thinking it was time to move on to other schemes. Probably. There were still a few down there and near the center was the one that both had independently discovered, made mental note of, and didn't discuss until now.
+The two men were exhausted and both thinking it was time to move on to other schemes. There were still a few down there and near the center was the one that both had independently discovered, made mental note of, and didn't discuss until now.
 
 "That one in the middle is especially big.", said Gog.
 
