--- a/002.org
+++ b/002.org
@@ -291,7 +291,7 @@ The two men were exhausted and both thinking it was time to move on to other sch
 
 "That one in the middle is especially big.", said Gog.
 
-"Yeah. That contraption we were thinking on to rope those out could stand to be ready about now. That's bigger than the one that inspired us!", said Grav.
+"Yeah. That contraption we were thinking on to vine those out could stand to be ready about now. That's bigger than the one that inspired us!", said Grav.
 
 "Which, you might add, took four of our biggest Feelers, plus us, to haul out. Only to have Drih smash it to pieces over the course of the whole day, only to find a /couple/ of uvula[fn:: This is the closest and most familiar thing 'pea sized' (and shaped) that the Crav are ever likely to encounter.]" Gog added after some genuine thought, "I think!"
 
