--- a/002.org
+++ b/002.org
@@ -309,7 +309,7 @@ The two men lounged with a clean soul. They already had their day's workout in; 
 
 "What?"
 
-"We could roll stones down the sluice and hammer it with them. There's enough strength in the water to push some big stones. Maybe even boulders[fn:: Their reckoning was about 273 millimeters, ours is 256.]."
+"We could roll stones down the sluice and hammer it with them. There's enough strength in the water to push some big stones. Maybe even boulders[fn:: Their reckoning was about 273 millimeters, ours is 256.]. We know how to easily pick nice heavy, useless ones. They're all over the place. There's even a good pile of especially big ones near the spillway feed tower."
 
 "Hmmmm...", deeply pondered Gog. "Oh, we could also divert at the falls up river like last time we had to bring the water down. Most of that is still there...obviously. We might be able to get rock-on-rock without any water in the way."
 
