--- a/002.org
+++ b/002.org
@@ -305,6 +305,22 @@ The two men lounged with a clean soul. They already had their day's workout in; 
 
 "If we can swing the sluice back and forth fast enough, we can make it sway back and forth[fn:: The men called this technique 'self-shake-rhythm'.]. It's too bad we can't rope it up and..."
 
+"Wait... how can we be made of liver when liver is the thing that gives us the most power?"
+
+Gog stared.
+
+"If our flesh becomes liver, why would we not use that as power?"
+
+"Do you think we actually become liver?", said Gog.
+
+Despite having clever minds, the two men had ideas that were just as firmly implated as "God" is in a modern human. There is no source in shame if you are late in realizing that some things are less literal than other things.
+
+The obviousness of it occurred to Gog immediately and he felt ashamed at his naivete.
+
+"Eee..heh. Every now and then one of those pop up late in life for you and you are just so saddened by your mind."
+
+"Yeah, well, I'm sure I'll top you one day.", assuaged Gog, reluctantly.
+
 "Great Questions!", exclaimed Grav.
 
 "What?"
