--- a/002.org
+++ b/002.org
@@ -313,7 +313,7 @@ Gog stared.
 
 "Do you think we actually become liver?", said Gog.
 
-Despite having clever minds, the two men had ideas that were just as firmly implated as "God" is in a modern human. There is no source in shame if you are late in realizing that some things are less literal than other things.
+Despite having clever minds, the two men had ideas that were just as firmly implated as "God" is in a modern human. There is no source in shame if you are late in realizing that some things are less literal than other things. Some things went directly from "must not be challenged" to "must not be discussed" rather quickly, as this was the only way of handling these things.
 
 The obviousness of it occurred to Gog immediately and he felt ashamed at his naivete.
 
