--- a/002.org
+++ b/002.org
@@ -303,7 +303,7 @@ The two men were exhausted and both thinking it was time to move on to other sch
 
 The two men lounged with a clean soul. They already had their day's workout in; sprinting through a 3D maze for the first half, and almost drowning during the second half of the morning. And now they had eaten some of the dried and pressed ambling-feast liver pucks. With sated bellies, they both lounged facing skyward, topping off their philosopher's tans [fn:: Having a uniform facial tan, without any lightening under your eyelids or beneath your nose or chin, is a sign of confident accomplishment, and having serenity of mind. "Upper class" only in that it has a distinguished look, like a neatly shaved face. In a way it means, 'I do not have to work because I am smart.'].
 
-"If we can swing the sluice back and forth fast enough, we can make it sway back and forth[fn:: The men called this technique 'self-shake-rhythm'.]. It's too bad we can't rope it up and..."
+"If we can swing the sluice back and forth at the right speed, we can make the rock sway back and forth in time ever harder[fn:: The men called this technique 'self-shake-rhythm'.]. It's too bad we can't rope it up and..."
 
 "Wait... how can we be made of liver when liver is the thing that gives us the most power?"
 
