--- a/002.org
+++ b/002.org
@@ -317,7 +317,7 @@ Despite having clever minds, the two men had ideas that were just as firmly impl
 
 The obviousness of it occurred to Gog immediately and he felt ashamed at his naivete.
 
-"Eee..heh. Every now and then one of those pop up late in life for you and you are just so saddened by your mind."
+"Eee..heh. Every now and then one of those pop up late in life for you and you are just so saddened by your reflect-soul."
 
 "Yeah, well, I'm sure I'll top you one day.", assuaged Gog, reluctantly.
 
