--- a/002.org
+++ b/002.org
@@ -331,7 +331,9 @@ The obviousness of it occurred to Gog immediately and he felt ashamed at his nai
 
 "Ooo. I like![fn:: The literal pronunciation of this expression was 'mi-gewstaah', which overlaps a modern language pretty closely in both pronunciation and nuance, surprisingly.]"
 
-Grav and Gog had clambered up to the falls where a dam had been constructed to divert most of the river several months ago. The twin of a small-one owned by a Worker interrupted a planning meeting in a panic insisting that his brother was pinned under a boulder. After lots of very focused, serious questioning, the boy said this was about two boulder-door men downstream where the river pinched and became more rapid.
+Grav and Gog had clambered up to the falls where a dam had been constructed to divert most of the river several months ago.
+
+The twin of a small-one owned by a Worker interrupted a planning meeting in a panic insisting that his brother was pinned under a boulder. After lots of very focused, serious questioning, the boy said this was about two boulder-door men downstream where the river pinched and became more rapid.
 
 The whole mine had come together to rapidly re-enable the dam to send the river on a different (as of then, virgin) course, which had been spotted and identified as a good place to do this moons before. There was lowering the river, and then there was "stopping" the river. The stated goal of this dam was the latter.
 
