--- a/002.org
+++ b/002.org
@@ -335,9 +335,9 @@ Grav and Gog had clambered up to the falls where a dam had been constructed to d
 
 The twin of a small-one owned by a Worker interrupted a planning meeting in a panic insisting that his brother was pinned under a boulder. After lots of very focused, serious questioning, the boy said this was about two boulder-door men downstream where the river pinched and became more rapid.
 
-The whole mine had come together to rapidly re-enable the dam to send the river on a different (as of then, virgin) course, which had been spotted and identified as a good place to do this moons before. There was lowering the river, and then there was "stopping" the river. The stated goal of this dam was the latter.
+The whole mine had come together to rapidly re-enable the dam to send the river on a different (as of then, virgin) course. The dam consisted of a number of cleverly-fitting pieces, mostly bolders, and could be opened and closed in a short time with enough caveman power. There was lowering the river, and then there was "stopping" the river. There were a few dams. The stated goal of this one was the latter.
 
-They happened to also be shorthanded that day and worked frantically, if only to recover a body. The men who went and returned from downstream said it was too deep and strong to safely explore possible boulders, of which there were many. The one the boy pointed to was impossible. The best that might be done is to dislodge the body with a long tree trunk handled by many men.
+They happened to also be shorthanded that day and so worked frantically, if only to recover a body. The men who went and returned from downstream said it was too deep and strong to safely explore possible boulders, of which there were many. The one the boy pointed to was impossible. The best that might be done is to dislodge the body with a long tree trunk handled by many men.
 
 The dam building had completed in about 45 minutes, with only the powerful spray between boulders feeding the river at this point. And a hungry torrent heading roughly at a right angle to the river's original course soon took out trees and made a gorge that would surely need a name eventually.
 
