--- a/002.org
+++ b/002.org
@@ -339,11 +339,8 @@ The whole mine had come together to rapidly re-enable the dam to send the river 
 
 They happened to also be shorthanded that day and so worked frantically, if only to recover a body. The men who went and returned from downstream said it was too deep and strong to safely explore possible boulders, of which there were many. The one the boy pointed to was impossible. The best that might be done is to dislodge the body with a long tree trunk handled by many men.
 
+yyy
 The dam building had completed in about 45 minutes, with only the powerful spray between boulders feeding the river at this point. And a hungry torrent heading roughly at a right angle to the river's original course soon took out trees and made a gorge that would surely need a name eventually.
-
-The men spent a quarter day heaving the boulders into position. Each rocking and threatening to topple at any time. Behind this, they put several layers of sturdy woven bamboo screens.
-
-Once complete, the large boulder in the center of the gouge was not exposed but had only about a palm of muddy water rushing over it. It would do.
 
 A chain of men, headed out when it was only just marginal, long enough to peek, peek again, and if possible feel under several boulders, including the prime candidate.
 
@@ -361,15 +358,21 @@ With the casual affectation that only guilty children have, he sauntered to the 
 
 "Is this the brother that drown?", he asked. "Are there only **two of you**?"
 
-"I'm sorry, sir. He said he was going to play downstream. I thought he said 'swim' downstream. I think he threw something big in the river and when I looked, I only saw the splash and kept looking for him to come up."
+"I'm sorry, sir. He said he was going to play downstream. I thought he said 'swim' downstream. I think he threw something big in the river and when I looked, I only saw the splash and kept looking for him to come up.
 
-"All-Questions! You troublesome boy. If we ever figure out who your here with, we are going to ask them never to bring you again."
+We cleared all this up just now."
 
-Both boys ran into the woods and it would turn out, never be seen again by anyone with any confidence.
+"All-Questions! You troublesome boy. If we ever figure out who you are here with, we are going to ask them never to bring you again."
 
-As today's boulder was more or less in the center of the gouge, the river-fist landed more or less directly on its top. The river's depth now left the top of the large rock more or less flush with the water's surface. Having to discover by trial that rocks would take a shorter path than the water, they lengthened the sluice a bit until the smaller trial boulders, heaved up as far up the sluice as could be thrown, were knocking on its top squarely.
+Both boys ran into the woods and it would turn out, never be seen again by anyone with any confidence[fn:: This was much observed and discussed by all for nearly a moon, when work was consdusive to idle speculation and clay-talk. A few, but only a few called the mystery 'the twins paradox'.].
 
-There were no good places to just pick up boulders and drop them in the sluice. The only option was hauling the biggest boulders they could carry up the zig-zag of ladders to the top of the sluice where it's fed by the spillway. This they did, and after an infuriating walk or two down to adjust the spillway, they had a reliable way to konk the large, intriguing boulder right on its head, over and over, with the biggest boulders they care to carry one half boulder-door men up a series of ladders.
+On this occasion, the men used the same dam but with some pieces missing. The work was exhausting and they needn't over-do things. The men quite a while heaving the boulders into position, each rocking and threatening to topple at any time, and then hopefully stabilized. Behind this, they put several layers of sturdy woven bamboo screens.
+
+Once complete, the large boulder in the center of the gouge was not exposed but had only about a palm of muddy water rushing over it. It would do.
+
+As today's boulder was more or less in the center of the gouge, the river-fist landed more or less directly on its top. The river's depth now left the top of the large rock more or less flush with the water's surface. Having to discover by trial that rocks would take a shorter path than the water, they lengthened the sluice a bit until the smaller trial boulders, heaved as far up the sluice as could be thrown, were knocking on its top squarely.
+
+There were no good places to just pick up mighty boulders and drop them in the sluice. The only option was hauling the biggest boulders they could carry up the zig-zag of ladders to the top of the sluice where it's fed by the spillway. This they did, and after an infuriating walk or two down to adjust the sluice, they had a reliable way to konk the large, intriguing boulder right on its head, over and over, with the biggest boulders they care to carry one half boulder-door men up a series of ladders that verged on stairs but definitely were not stairs and definitely a series of ladders for boulder-carrying purposes.
 
 The heavy boulders caused the sluice to bounce, and so one man would carry boulders and the other would fine-tune the sluice, carrying boulders to the base of the trestle if the sluice could be left alone for a while.
 
