--- a/002.org
+++ b/002.org
@@ -339,7 +339,7 @@ The whole mine had come together to rapidly re-enable the dam to send the river 
 
 They happened to also be shorthanded that day and so worked frantically, if only to recover a body. The men who went and returned from downstream said it was too deep and strong to safely explore possible boulders, of which there were many. The one the boy pointed to was impossible. The best that might be done is to dislodge the body with a long tree trunk handled by many men.
 
-The dam building had completed in about 45 minutes, with only the powerful spray between boulders feeding the Natural river. And a hungry torrent heading roughly at a right angle to the river's original course soon took out trees and made a gorge that would surely need a name eventually.
+The dam building was completed in about 45 minutes, with only the powerful spray between boulders feeding the Natural river. And a hungry torrent heading roughly at a right angle to the river's original course soon took out trees and made a gorge that would surely need a name eventually.
 
 A chain of men, headed out when it was only just marginal, long enough to peek, peek again, and if possible feel under several boulders, including the prime candidate.
 
