--- a/002.org
+++ b/002.org
@@ -341,7 +341,7 @@ They happened to also be shorthanded that day and so worked frantically, if only
 
 The dam building was completed in about 45 minutes, with only the powerful spray between boulders feeding the Natural river. And a hungry torrent heading roughly at a right angle to the river's original course soon took out trees and made a gorge that would surely need a name eventually.
 
-A chain of men, headed out when it was only just marginal, long enough to peek, peek again, and if possible feel under several boulders, including the prime candidate.
+A chain of men, headed out when it was only just marginal, long enough to peek, peek again, and if possible feel under several boulders, including the prime candidate. The river was also noticibly clearer now, which helped.
 
 An older man who was doing his best to be helpful with suggestions and the general dissemination of information to those who could use it approached the boy. "Now, goat-calf, so you think these men have checked under all of the likely boulders? Could it maybe be the one behind the big one?"
 
