--- a/002.org
+++ b/002.org
@@ -363,9 +363,9 @@ We cleared all this up just now."
 
 "All-Questions! You troublesome boy. If we ever figure out who you are here with, we are going to ask them never to bring you again."
 
-Both boys ran into the woods and it would turn out, never be seen again by anyone with any confidence[fn:: This was much observed and discussed by all for nearly a moon, when work was consdusive to idle speculation and clay-talk. A few, but only a few called the mystery 'the twins paradox'.].
+Both boys ran into the woods and it would turn out, never be seen again by anyone with any confidence[fn:: This was speculated upon and discussed by all for nearly a moon, when work was conducive to idle speculation and clay-talk. A few, but only a few called the mystery 'the twins paradox'.].
 
-On this occasion, the men used the same dam but with some pieces missing. The work was exhausting and they needn't over-do things. The men quite a while heaving the boulders into position, each rocking and threatening to topple at any time, and then hopefully stabilized. Behind this, they put several layers of sturdy woven bamboo screens.
+On this occasion, the men used the same dam but with some pieces missing. The work was exhausting and they needn't over-do things. The men spent quite a while heaving the boulders into position, each rocking and threatening to topple at any time, and then hopefully being stabilized. Behind this, they put several layers of sturdy woven bamboo screens[fn:: In contrast to bamboo /fiber/ screens, these were literally woven of wrist thick bamboo, which could be accomplished with a lot of steam and strategic lack of perfectionism.].
 
 Once complete, the large boulder in the center of the gouge was not exposed but had only about a palm of muddy water rushing over it. It would do.
 
