--- a/002.org
+++ b/002.org
@@ -369,7 +369,7 @@ On this occasion, the men used the same dam but with some pieces missing. The wo
 
 Once complete, the large boulder in the center of the gouge was not exposed but had only about a palm of muddy water rushing over it. It would do.
 
-As today's boulder was more or less in the center of the gouge, the river-fist landed more or less directly on its top. The river's depth now left the top of the large rock more or less flush with the water's surface. Having to discover by trial that rocks would take a shorter path than the water, they lengthened the sluice a bit until the smaller trial boulders, heaved as far up the sluice as could be thrown, were knocking on its top squarely.
+As today's boulder was more or less in the center of the gouge, the river-fist landed more or less directly on its top. yyy Having to discover by trial that rocks would take a shorter path than the water, they lengthened the sluice a bit until the smaller trial boulders, heaved as far up the sluice as could be thrown, were knocking on its top squarely.
 
 There were no good places to just pick up mighty boulders and drop them in the sluice. The only option was hauling the biggest boulders they could carry up the zig-zag of ladders to the top of the sluice where it's fed by the spillway. This they did, and after an infuriating walk or two down to adjust the sluice, they had a reliable way to konk the large, intriguing boulder right on its head, over and over, with the biggest boulders they care to carry one half boulder-door men up a series of ladders that verged on stairs but definitely were not stairs and definitely a series of ladders for boulder-carrying purposes.
 
