--- a/002.org
+++ b/002.org
@@ -157,9 +157,7 @@ Grav interjected, "Don't you feel like that could have some push-back? Treating 
 
 "And also," Grav expended on his unoriginal theory, "wouldn't that kind of thing feed back on itself, rapidly?
 
-xxx yyy xxx
-
-If you've driven those away who just /reasonably/ object to whatever urgent thing you're being lectured on, what's left over are a particular kind of caveperson. Kind of the last-part I'll call it. Or no, 'tail', like what you see disappearing into the bush when you've scared off a big lizard. There's a part that hangs around a bit longer. The 'tail'. Father-Brother Verk's tail of hangers-on are desperate for his approval. They will silently undergo /even worse/ mistreatment by him[fn:: They both felt a stir referring to Verk this way.] which in turn means that mistreatment can /expand/ and meet the new allowance, and so a person's[fn:: Gog was trying to steer back into the /abstract/ caveperson as the topic of conversation.] behavior can get /more/ extreme, which scares those around even more, making them willing to just let any kind of behavior go; pretend it didn't happen. Just don't get 'kicked out', you know what I mean. Rather simple people, usually."
+If you've driven those away who just /reasonably/ object to whatever urgent thing you're being lectured on, what's left over are a particular kind of caveperson. Kind of the last-part I'll call it. Or no, 'tail', like what you see disappearing into the bush when you've scared off a big lizard. There's a part that hangs around a bit longer. The 'tail'. Father-Brother Verk's tail of hangers-on are desperate for his approval. They will silently undergo /even worse/ mistreatment by him[fn:: They both felt a stir referring to Verk this way.] which in turn means that mistreatment can /expand/ and meet the new allowance, and so a person's[fn:: Gog was trying to steer back into the /abstract/ caveperson as the topic of conversation.] behavior can get /more/ extreme, which scares those around even more, making them willing to just let any kind of behavior go; pretend it didn't happen. Do whatever, just don't get 'kicked out', you know what I mean? Rather simple people, usually."
 
 "Father-Brother Verk was a bit on the abusive side with me this morning.", said Grav.
 
