--- a/002.org
+++ b/002.org
@@ -161,7 +161,7 @@ If you've driven those away who just /reasonably/ object to whatever urgent thin
 
 Cult of Verk has a long tail." He said without thinking.
 
-Simaltaniously, both shot a look at the other, each noticing an air of shock in the other. Haven gotten lost in the indignation he felt welling up, his speech was in sick-monkey mode. He had stopped suddenly with his mouth still slightly open.
+Simaltaniously, both shot a look at the other, and each noticing an air of shock. Having gotten lost in the indignation he felt welling up, his speech was in sick-monkey mode. He had stopped suddenly with his mouth still slightly open.
 
 Grav continued, with patience. "Father-Brother Verk was a bit on the abusive side with me this morning."
 
