--- a/002.org
+++ b/002.org
@@ -163,7 +163,7 @@ Cult of Verk has a long tail." He said without thinking.
 
 Simaltaniously, both shot a look at the other; each noticing an air of shock. Having gotten lost in the indignation he felt welling up, his speech was in sick-monkey mode. He had stopped suddenly with his mouth still slightly open.
 
-Grav continued, with patience. "Father-Brother Verk was a bit on the abusive side with me this morning."
+Grav continued, with patience. "Father-Brother Verk was a bit on the abusive side with me this morning. And earlier."
 
 Gog made a pouty lower lip face at him. He pantomimed a child about to cry, with a quivering face.
 
