--- a/002.org
+++ b/002.org
@@ -167,7 +167,7 @@ Grav continued, with patience. "Father-Brother Verk was a bit on the abusive sid
 
 Gog made a pouty lower lip face at him. He pantomimed a child about to cry, with a quivering face.
 
-Grav felt like they were nearing a point where they both just wanted drop the prefixes and the pretense. Their many heretical conversations had a rhythm they both knew well: Adjust loudness based upon scandalousness, try to use a lot of mutually-understandable wrapper language, even when no one is around (and no one /should/ be), and speak the polite deferential, pious parts just above normal conversational volume.
+Grav felt like they were nearing a point where they both just wanted to drop the prefixes and the pretense. Their many heretical conversations had a rhythm they both knew well: Adjust loudness based upon scandalousness, try to use a lot of mutually-understandable wrapper language, even when no one is around (and no one /should/ be), and speak the polite deferential, pious parts just above normal conversational volume.
 
 "Uh-huh. Don't act like you haven't been there. Being shunned by The Great Bear on the one hand is just dew off the leaf, but on the other hand, it's like a kind of reality stabilizer that you've known all your life; and unknowingly leaned upon." After two drop-stone, "If you know what I mean."
 
