--- a/002.org
+++ b/002.org
@@ -173,17 +173,20 @@ Grav felt like they were nearing a point where they both just wanted to drop the
 
 Grav paused and stared into the distance, slowly squinting his eyes with some kind of mental strain.
 
-"Figuring out where you are supposed to be in the clubbing-order[fn:: They really say exactly this and it pretty much exactly means 'pecking-order'.] is a lifelong task. I think so. I've only just now come to accept that the disorienting feeling of not knowing for sure and always being in great doubt about it is a permenent feature of life. Just dumbly accepting that fact helps and helps you get on with more important things.
+"Figuring out where you are supposed to be in the clubbing-order[fn:: They really say exactly this and it pretty much exactly means 'pecking-order'.] is a lifelong task. I think so. I've only just now come to accept that the disorienting feeling of not knowing for sure and always being in great doubt about it is a permanent feature of one's reflect-soul. Just dumbly accepting that fact helps and helps you get on with more important things.
 
-Having it seem like a clan member is turning on you with little explanation is like a kind of this-world[fn:: Reality.] destabilizer. You've known and understood this part of the clubbing-order all your life: Verk is great. If you're in with Verk you are snug and happy, like being beside a warm fire on a wet, cold day. You know that you're safe in your part of the tribe.
+But this is new to me. Having it seem like a clan member is turning on you with little explanation is like a kind of this-world[fn:: Reality.] destabilizer. You've known and understood /this/ part of the clubbing-order all your life: Verk is great. If you're in with Verk you are snug and happy, like being beside a warm fire on a wet, cold day. You know that you're safe in your part of the tribe.
 
 That's all you've known and it's not even something you think about.
 
-And then that is sort of yanked away from you without explanation. Like removing someone's skins while they're snugly and peacefully sleeping. 'What is happening?' you want to ask but don't even understand how to ask the question or to whom you should ask.
+And then that is sort of yanked away from you without explanation, or so it seems. Like whipping away someone's sleep-skins while they're snugly and peacefully sleeping on a cold night. 'What is happening?' you want to ask but don't even understand how to ask the question or to whom you should ask.
 
 Make any sense?", a mentally tired Grav said and sat back, purposefully relaxing, working on his wolf-sleep and listening to Gog's response.
 
-"I think so.", said Gog. "The whole clan is your close-circle[fn:: The closest layers of one's 'tribe'.]. All of those people deeply admire and revere Father-Brother Verk and if you feel like you're the only one who sees that nasty side of him, it makes you feel like you're going spurned-rhino."
+"I think so.", said Gog. "The whole clan is your close-circle[fn:: The closest layers of one's 'tribe'.]. All of those people deeply admire and revere Father-Brother Verk and if you feel like you're the only one who sees that nasty side of him, it makes you feel like you're going spurned-rhino.
+
+I've just come to accept: It's there. No big deal. Do your best. Blaze your way through[fn:: /transitive verb To indicate (a trail) by making blazes./ Did you think this had something to do with fire? Isn't this /your/ language? The expression used by Gog refers to marking a trail as you go with a sharp axe. It's an expression that simply means 'make your way through...' (e.g. life)] life.
+"
 
 Grav jumped up, in part because it was time to get going again, but also in part out of surprise. He turned in the air, landing on his feet to face Gog[fn:: Being as fit as a monkey, some of the caveperson physical mannerisms would often astound you. "The peak of human fitness" is not any kind of cliche for them. Everyone is pretty close to there out of necessity. And what is more, it was never seen as any kind of burden to them to maintain this kind of fitness. Life was just life. A Crec would leap your 8-foot garden fence with a grunt in the same way you would deftly leg over crotch-high barrier with a beer in each hand.]. Gog continued to sit on his rock with his chin on his fist, staring at Grav.
 
