--- a/002.org
+++ b/002.org
@@ -175,7 +175,7 @@ Grav paused and stared into the distance, slowly squinting his eyes with some ki
 
 "Figuring out where you are supposed to be in the clubbing-order[fn:: They really say exactly this and it pretty much exactly means 'pecking-order'.] is a lifelong task. I think so. I've only just now come to accept that the disorienting feeling of not knowing for sure and always being in great doubt about it is a permanent feature of one's reflect-soul. Just dumbly accepting that fact helps and helps you get on with more important things.
 
-But this is new to me. Having it seem like a clan member is turning on you with little explanation is like a kind of this-world[fn:: Reality.] destabilizer. You've known and understood /this/ part of the clubbing-order all your life: Verk is great. If you're in with Verk you are snug and happy, like being beside a warm fire on a wet, cold day. You know that you're safe in your part of the tribe.
+But this is new to me. Having it seem like a clan member is turning on you with little explanation is like a kind of this-world[fn:: Reality.] destabilizer. You've known and understood /this/ part of the clubbing-order all your life: Verk is great. If you're in with Verk you are snug and happy, like being beside a warm fire just after dawn with a cold drizzling rain outside. You know that you're safe in your part of the tribe. It's a safe-with-many[fn:: Safety in numbers.] feeling that helps you to relax and have clear thoughts. And just be happier.
 
 That's all you've known and it's not even something you think about.
 
