--- a/002.org
+++ b/002.org
@@ -392,7 +392,9 @@ As today's boulder was more or less in the center of the gouge, the river-fist l
 
 There were no good places to just pick up mighty boulders and drop them in the sluice. The only option was hauling the biggest boulders they could carry up the zig-zag of ladders to the top of the sluice where it's fed by the spillway. This they did, and after an infuriating walk or two down to adjust the sluice, they had a reliable way to konk the large, intriguing boulder right on its head, over and over, with the biggest boulders they care to carry one half of one boulder-door[fn:: 50] men up a series of ladders that verged on stairs but definitely were not stairs and definitely were a series of ladders for boulder-hauling purposes.
 
-The heavy boulders caused the sluice to bounce, and so one man would carry boulders and the other would fine-tune the sluice, carrying boulders to the base of the trestle if the sluice could be left alone for a while.
+The heavy boulders caused the sluice to bounce as they went down, usually not distructively but enough to affect accuracy, and so one man would carry boulders and the other would fine-tune the sluice, carrying boulders to the base of the trestle if the sluice could be left alone for a while.
+
+Gog, while jogging around, noticed that the sluice looked like a trunk-harp[fn:: Some strong, dried sinew tied on one end to a hopefully-hollow trunk, and to a bit of the same tree's root (usually excavated for) on the other end, with a sort of pedal (stick, about 1/2 man long) whose one end was put on the nearby ground and the other against the sinew, near the bottom, that can be pressed variously by a foot to produce different tightness (notes) in the string. Others would strike, slap, rub with smooth honey-tackeyed sticks, dampen, punch, glance with arrows, beat with one's spear or one of your enemy's arms...whatever the trance called for. Glancing the string just right with the fingertips of a human arm made an astonishingly beautiful harp sound that was in great demand. It's quite an instrument given that it can be put together in about a minute.] string, even having different notes. Not being able to see the boulders from below, he had a hunch it had to do with boulder size.
 
 Grav, now genuinely trembling with exhaustion as only a caveman can, felt some frustration at having to send down a promising boulder or two. In theory, the gouge would be littered with conveniently smashed rock. He wondered if they'd be at that large boulder for a while. If it was promising...why not? Maybe do more of this. Maybe the great boulder's real value would be in that of a smashing device for /other/ more interesting rocks.
 
