--- a/002.org
+++ b/002.org
@@ -412,7 +412,7 @@ Having moved the sluice downstream, and with the river still rather low, they re
 
 "Nope."
 
-Grav and Gog got their gear together, knowing that this was enough for one day. It was only one-palm-after-noon or so but they hadn't intended to make a full day out of only this, and Gog hadn't expected to get drug into a greased-lizard-bird-hatchling chase[fn:: A 'wild goose chase'. The greased hatchling chase was a drunken, sadistic mob activity that for some reason also involved much more butt-slapping than is normally observed. This was neither acknowledge nor understood by the Crec.]. On some days, the exhaustion told you it was time to quit before the sun did.
+Grav and Gog got their gear together, knowing that this was enough for one day. It was only one-palm-after-noon or so but they hadn't intended to make a full day out of only this, and Gog hadn't expected to get drug into a greased-obsidian-hatchling chase[fn:: A 'wild goose chase'. The greased hatchling chase was a drunken, sadistic mob activity that for some reason also involved much more butt-slapping than is normally observed. This was neither acknowledge nor understood by the Crec. The 'grease' came from the mother, which had been eaten. If there was a sufficiently feisty, scruffy, angry chick hopping around angrily as the men ate, sometimes for over an hour, they would, given enough end-of-the-hunt juff and spirit, catch and chuck the bird into its mother's self-made frying oil, where it would immediately hop out, now bald, greasy, furious and in pain, and having no more interest in anything but escape, would bolt into the woods. If a man caught it, he was permitted one copulation with the wife of his choosing, from any of the men.]. On some days, the exhaustion told you it was time to quit before the sun did.
 
 They passed through the "interesting" pile and toed around as they always do out of habit. Gog, with his toe, not bothering to bend down, pushed around some head-sized rocks to see underneath, as a strategy for maximizing rocks-inspected for given effort. He could indeed "toe" entire torso sized boulder, to an extent, having an intimate understanding of rock dynamics and legs that were made out of iron-tree[fn:: Yes, the very same tree with the very same name.].
 
