--- a/002.org
+++ b/002.org
@@ -412,15 +412,15 @@ Having moved the sluice downstream, and with the river still rather low, they re
 
 "Nope."
 
-Grav and Gog got their gear together, knowing that this was enough for one day. It was only one-palm-after-noon or so but they hadn't intended to make a full day out of only this, and Gog hadn't expected to get drug into a greased-obsidian-hatchling chase[fn:: A 'wild goose chase'. The greased hatchling chase was a drunken, sadistic mob activity that for some reason also involved much more butt-slapping than is normally observed. This was neither acknowledge nor understood by the Crec. The 'grease' came from the mother, which had been eaten. If there was a sufficiently feisty, scruffy, angry chick hopping around angrily as the men ate, sometimes for over an hour, they would, given enough end-of-the-hunt juff and spirit, catch and chuck the bird into its mother's self-made frying oil, where it would immediately hop out, now bald, greasy, furious and in pain, and having no more interest in anything but escape, would bolt into the woods. If a man caught it, he was permitted one copulation with the wife of his choosing, from any of the men.]. On some days, the exhaustion told you it was time to quit before the sun did.
+Grav and Gog got their gear together, knowing that this was enough for one day. It was only one-palm-after-noon or so but they hadn't intended to make a full day out of only this, and Gog hadn't expected to get drug into a greased-obsidian-hatchling chase[fn:: A 'wild goose chase'. The greased hatchling chase was a drunken, sadistic mob activity that for some reason also involved much more butt-slapping than is normally observed. This was neither acknowledge nor understood by the Crec. The 'grease' came from the mother, which had been eaten. If there was a sufficiently feisty, scruffy, angry chick hopping around screeching as the men ate leasurly, they would, given enough end-of-the-hunt juff and spirit, catch and chuck the bird into its mother's self-made frying oil, where it would immediately hop out, now bald, greasy, furious and in pain, and having no more interest in anything but escape, would bolt into the woods. If a man caught it, he was permitted one copulation with the wife of his choosing, from any of the men.]. On some days, the exhaustion told you it was time to quit before the sun did.
 
-They passed through the "interesting" pile and toed around as they always do out of habit. Gog, with his toe, not bothering to bend down, pushed around some head-sized rocks to see underneath, as a strategy for maximizing rocks-inspected for given effort. He could indeed "toe" entire torso sized boulder, to an extent, having an intimate understanding of rock dynamics and legs that were made out of iron-tree[fn:: Yes, the very same tree with the very same name.].
+They passed through the "interesting pile" and toed around as they always do out of habit. Gog, with his toe, not bothering to bend down, pushed around some head-sized rocks to see underneath, as a strategy for maximizing rocks-inspected for given effort. He could indeed "toe" entire torso sized boulder, to an extent, having an intimate understanding of rock dynamics and legs that were made out of iron-tree[fn:: Yes, the very same tree with the very same name.].
 
-One rock that he had only touched with his toe, and then reconsidered, moving on to others, made a sharp "click"[fn:: The two men had a more or less modern-human ear. The majority of this 'click', while still sharp and clear to the men, was in the ultrasonic range and caused two incongruous bats cruising the bright blue morning sky to make a u-turn.].
+One rock that he had only touched with his toe, and then reconsidered, moving on to others made a sharp "click"[fn:: The two men had a more or less modern-human ear. The majority of this 'click', while still sharp and clear to the men, was in the ultrasonic range and caused two incongruous bats cruising the bright blue morning sky to make a u-turn.].
 
 "What the sew?", said Gog, who was the only one able to connect the sound with the cleanly split rock just next to his foot. Grav turned and followed Gog's gaze, instantly making a face to match his; one of wonderment.
 
-The oddly uniform, oddly oval, oddly beautiful-on-its own stone had been split in two by a perfectly flat planer separation, that Gog had to repeatedly swear there was no hint of before the audible crack.
+The oddly uniform, oddly oval, oddly beautiful-on-its own stone had been split in two by a perfectly flat planer separation that Gog had to repeatedly swear there was no hint of before the audible crack.
 
 Instantly the two men felt like they were the caretakers of one of the most wondrous objects anyone had ever seen[fn:: They would have sought traffic cones and bright black-yellow tape if they knew of such.]. Together they first scuttled along the slight grade, one on either side, and then stopped and knelt on one knee to look.
 
